--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,6 +14,8 @@ builds:
     goarch:
       - amd64
       - arm64
+    ldflags:
+      - -X=main.version={{ .Version }}
 
 release:
   prerelease: auto
