--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,6 +14,7 @@ builds:
     goarch:
       - amd64
       - arm64
+      - arm
     goarm:
       - 6
       - 7
@@ -43,7 +44,7 @@ archives:
 
 checksum:
   name_template: 'checksums.txt'
-snapshot: 
+snapshot:
   name_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
