fix: window size change did not reflect in browsing view

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -48,10 +48,28 @@ snapshot:
   name_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
+  use: github
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
+    - Merge remote-tracking branch
+    - Merge branch
+  groups:
+    - layout: post
+title: 'Features'
+      regexp: "^.*feat[(\\w)]*:+.*$"
+      order: 0
+    - layout: post
+title: 'Fixes'
+      regexp: "^.*fix[(\\w)]*:+.*$"
+      order: 10
+    - layout: post
+title: Other work
+      order: 999
+  # sort: asc
+  # filters:
+  #   exclude:
+  #     - '^docs:'
+  #     - '^test:'
 
 brews:
   - name: scotty
